remove stray letter

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -60,7 +60,7 @@
               <div class="aspect-ratio aspect-ratio--1x1 mb4">
                 <div class="aspect-ratio--object cover" style="background:url('yawwn-art.jpg') center;"></div>
               </div>
-            </article>f
+            </article>
             <h1 class="f2 f1-l fw2 mb0 hover-white lh-title">YAWWN</h1>
             <h2 class="fw1 f3 mt3 mb4">
               <a id="social-icon" class="link white-60 bg-transparent inline-flex items-center ma2 tc br2 pa2" href="https://www.facebook.com/yawwning/" title="Facebook">
