Remove Skull icon, about & live. Add both soundcloud links for Mercy and Partisan in iFrames

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -38,17 +38,14 @@
       <div class="cover bg-left bg-center-l" style="background-image: url(Photo06_19A copy.jpg)">
         <div class="pb5 pb6-m pb7-l">
           <nav class="dt w-100 mw8 center">
-            <div class="dtc w2 v-mid pa3">
+            <!-- <div class="dtc w2 v-mid pa3">
               <a href="/" class="dib w2 h2 pa1 ba grow-large border-box">
                 <svg class="link hover-white" data-icon="skull" viewBox="0 0 32 32" style="fill:currentcolor"><title>skull icon</title><path d="M16 0 C6 0 2 4 2 14 L2 22 L6 24 L6 30 L26 30 L26 24 L30 22 L30 14 C30 4 26 0 16 0 M9 12 A4.5 4.5 0 0 1 9 21 A4.5 4.5 0 0 1 9 12 M23 12 A4.5 4.5 0 0 1 23 21 A4.5 4.5 0 0 1 23 12"></path></svg>
               </a>
-            </div>
+            </div> -->
             <div class="dtc v-mid tr pa3">
               <a class="f6 fw4 hover-white no-underline grow-large dn dib-ns pv2 ph3" href="#home" >Home</a>
               <a class="f6 fw4 hover-white no-underline grow-large dn dib-ns pv2 ph3" href="#listen" >Listen</a>
-              <a class="f6 fw4 hover-white no-underline grow-large dn dib-l pv2 ph3" href="#live" >Live</a>
-              <a class="f6 fw4 hover-white no-underline grow-large dn dib-l pv2 ph3" href="#about" >About</a>
-              <!-- <a class="f6 fw4 hover-white no-underline white-70 dib ml2 pv2 ph3 ba" href="/" >Sign Up</a> -->
             </div>
           </nav>
 
@@ -93,7 +90,8 @@
 
 
     <div id="listen" class="">
-      <iframe width="100%" height="160" src="https://clyp.it/oxfyusxz/widget" frameborder="0"></iframe>
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/344345589&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/344345240&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
     </div>
 
 
