Change 'live' link to Club Yawwn facebook event
- follow up will be to create live page to list future events
- this is a quick fix

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -46,7 +46,7 @@
             <div class="dtc v-mid tr pa3">
               <a class="f6 fw4 hover-white no-underline grow-large dn dib-ns pv2 ph3" href="#home" >Home</a>
               <a class="f6 fw4 hover-white no-underline grow-large dn dib-ns pv2 ph3" href="#listen" >Listen</a>
-              <a class="f6 fw4 hover-white no-underline grow-large dn dib-ns pv2 ph3" href="https://www.seetickets.com/tour/kane-strang?awc=7816_1509653909_92d65b37c0e589147f1e6ae5355441b9&AFF=aw" >Live</a>
+              <a class="f6 fw4 hover-white no-underline grow-large dn dib-ns pv2 ph3" href="https://www.facebook.com/events/530207454024862/" >Live</a>
             </div>
           </nav>
 
