:lipstick: Add assets for partisan artwork and new background
replace background with reflection image
replace EP art with Single art

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -35,7 +35,7 @@
   <body>
 
     <header class="sans-serif">
-      <div class="cover bg-left bg-center-l" style="background-image: url(Photo06_19A copy.jpg)">
+      <div class="cover bg-left bg-center-l" style="background-image: url(13.jpg)">
         <div class="pb5 pb6-m pb7-l">
           <nav class="dt w-100 mw8 center">
             <!-- <div class="dtc w2 v-mid pa3">
@@ -56,7 +56,7 @@
             </div>
             <article class="mw5 mw6-ns center">
               <div class="aspect-ratio aspect-ratio--1x1 mb4">
-                <div class="aspect-ratio--object cover" style="background:url('yawwn-art.jpg') center;"></div>
+                <div class="aspect-ratio--object cover" style="background:url('Partisan Artwork.png') center;"></div>
               </div>
             </article>
             <h1 class="f2 f1-l fw2 mb0 hover-white lh-title">YAWWN</h1>
