:sparkles: Add hyperurl listen audio link to "listen"

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -45,7 +45,7 @@
             </div> -->
             <div class="dtc v-mid tr pa3">
               <a class="f6 fw4 hover-white no-underline grow-large dn dib-ns pv2 ph3" href="#home" >Home</a>
-              <a class="f6 fw4 hover-white no-underline grow-large dn dib-ns pv2 ph3" href="#listen" >Listen</a>
+              <a class="f6 fw4 hover-white no-underline grow-large dn dib-ns pv2 ph3" href="http://hyperurl.co/obtic5" >Listen</a>
               <a class="f6 fw4 hover-white no-underline grow-large dn dib-ns pv2 ph3" href="https://www.facebook.com/events/530207454024862/" >Live</a>
             </div>
           </nav>
